# climategrid

./: .env.example  README.md  pyproject.toml
configs/: config.yaml
data/processed/: norm_stats.json
data/processed/ssp245/Chicago/: 2015_features.npy  2015_labels.npy  2016_features.npy  2016_labels.npy  2017_features.npy  2017_labels.npy  2018_features.npy  2018_labels.npy  2019_features.npy  2019_labels.npy  2020_features.npy  2020_labels.npy  2021_features.npy  2021_labels.npy  2022_features.npy  2022_labels.npy  2023_features.npy  2023_labels.npy  2024_features.npy  2024_labels.npy  2025_features.npy  2025_labels.npy  2026_features.npy  2026_labels.npy  2027_features.npy  2027_labels.npy  2028_features.npy  2028_labels.npy  2029_features.npy  2029_labels.npy  2030_features.npy  2030_labels.npy  2031_features.npy  2031_labels.npy  2032_features.npy  2032_labels.npy  2033_features.npy  2033_labels.npy  2034_features.npy  2034_labels.npy  (+52 more)
data/processed/ssp245/Houston/: 2015_features.npy  2015_labels.npy  2016_features.npy  2016_labels.npy  2017_features.npy  2017_labels.npy  2018_features.npy  2018_labels.npy  2019_features.npy  2019_labels.npy  2020_features.npy  2020_labels.npy  (+80 more)
scripts/: run_pipeline.py
src/api/: main.py  schemas.py
src/dashboard/: app.py
src/data/: cities.py  dataset.py  download.py  preprocess.py
src/inference/: predictor.py
src/llm/: advisor.py  tools.py
src/model/: climategrid.py  climax_encoder.py  cnn_encoder.py  labels.py  risk_head.py
src/training/: evaluate.py  train.py
tests/: test_api.py  test_data.py  test_model.py
(+3128 files in other folders)
