[project]
name = "climategrid"
version = "0.1.0"
description = "Urban climate disaster risk intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "cftime>=1.6.5",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.14.0",
    "mlflow>=3.12.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
    "uvicorn[standard]>=0.46.0",
    "xarray>=2026.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]

[tool.uv]
# Ensure the project root is on PYTHONPATH when using `uv run`
package = false
